A lot of trial and errors to get correct spacings and size. Containers feel over-complicated but will look at other examples now that I'm done and re-edit.

--- a/landing-page.css
+++ b/landing-page.css
@@ -1,7 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    width: 1000px;
+    /* width: 1000px; */
+    width: 50%;
     margin: auto;
 }
 /* blue row */
@@ -11,15 +12,29 @@ body {
     align-items: center;
     height: auto;
     background-color: #1f2937;
-    margin: 0;
-    padding: 3%;
+    padding: 8% 15%;
 }
 
 .container1{
     justify-content: space-between;
     font-size: 18px;
+    padding: 8px 15%;
 }
-
+.container2 {
+    display: flex;
+    flex-direction: row;
+    
+}
+.sign-up{
+    font-size: 12px;
+    background: #3882f6;
+    color: white;
+    width: 90px;
+    border-radius: 8px;
+    margin-top: 3%;
+    padding: 4px 0px;
+    
+}
 .header {
     color: #f9faf8;
     font-size: 24px;
@@ -31,9 +46,10 @@ body {
     color: #f9faf8;
 }
 
-.container2.1 {
+.container22 {
     display: flex;
     flex-direction: column;
+    width: 450px;
 }
 
 .link-header, .awesome-text {
@@ -43,9 +59,10 @@ body {
 
 .profile-image {
     background: gray;
-    border-radius: 0%;
-    width: 400px;
-    height: 100px;
+    width: 500px;
+    height: 200px;
+    margin-left: 46px;
+    
 }
 
 ul {
@@ -60,12 +77,24 @@ ul {
 /* Some random info row */
 .container3 {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5%;
+    
+}
+
+.container3-1 {
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    padding: 10%;
+    padding: 5% 15%;
 }
 
+.text {
+    width: 130px;
+    padding: 8px;
+}
 .title2{
     font-size: 36px;
     font-weight: bolder;
@@ -74,9 +103,9 @@ ul {
 .info-button {
     border-color: #3882f6;
     /* box-shadow: inset 2px 2px 4px rgba(0,0,0,.5); */
-    border-radius: 20%;
-    width: 100px;
-    height:  100px;
+    border-radius: 12%;
+    width: 140px;
+    height: 140px;
 }
 /* /Some random info row */
 /* Quote row */
@@ -85,14 +114,64 @@ ul {
     color: #1f2937;
     font-size: 36px;
     font-style: italic;
-    padding: 15%;
+    padding: 15% 25%;
 }
 /* /Quote row */
-.modal {
-    display: flex;
-    gap: 16px;
-    padding: 16px;
-}
-.container5 {
+/* blue box */
 
+.container44{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8%;
+    color: white;
+}
+.container45
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.container5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding-left: 15%;
+}
+.modal {
+    background: #3882f6;
+    /* width: 750px; */
+    width: 85%;
+    border-radius: 5px;
+    padding: 36px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.blue-header {
+    font-size: 18px;    
+    font-weight: bold;
+}
+.Sign-up2 {
+    font-size: 12px;
+    background: #3882f6;
+    color: white;
+    border-color: white;
+    border-radius: 8px;
+    padding: 4px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+}
+/* /blue box */
+
+.footer {
+    height: 72px;
+    background: #1f2937;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
